--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "university/MIT/courses/tanaenbaum/minix"]
 	path = university/MIT/courses/tanaenbaum/minix
 	url = https://github.com/minix3/minix.git
+[submodule "university/freebsd/freebsd"]
+	path = university/freebsd/freebsd
+	url = https://github.com/freebsd/freebsd.git
