--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "learning/www.cs.bham.ac.uk/os-tutorial"]
 	path = learning/www.cs.bham.ac.uk/os-tutorial
 	url = https://github.com/cfenollosa/os-tutorial.git
+[submodule "freebsd"]
+	path = freebsd
+	url = https://github.com/freebsd/freebsd.git
